force-app/main/default/objects/SCOC__SCOCProviderSettings__c/SCOC__SCOCProviderSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Credit Provider settings for use with SCOC.</description>
    <label>SCOC - Provider Settings</label>
</CustomObject>