force-app/main/default/objects/SCOC__SCOCProviderSettings__c/fields/SCOC__Bureau__c.field-meta.xml
<CustomField>
    <fullName>SCOC__Bureau__c</fullName>
    <description>Administrators populate this required text field to indicate the credit bureau to associate with the related provider and settings.</description>
    <label>Bureau</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>