force-app/main/default/objects/SCOC__SCOCProviderSettings__c/fields/SCOC__CreateJointPairs__c.field-meta.xml
<CustomField>
    <fullName>SCOC__CreateJointPairs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this provider will combine applicants into joint request pairs to streamline billing/charges.</description>
    <label>Create Joint Pairs</label>
    <type>Checkbox</type>
</CustomField>