force-app/main/default/objects/SCOC__SCOCProviderSettings__c/fields/SCOC__DefaultResource__c.field-meta.xml
<CustomField>
    <fullName>SCOC__DefaultResource__c</fullName>
    <description>This optional text field is populated by an admin to override a default in-memory provider static resource by name.</description>
    <label>DefaultResource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>