force-app/main/default/objects/SCOC__SCOCProviderSettings__c/fields/SCOC__isConsumer__c.field-meta.xml
<CustomField>
    <fullName>SCOC__isConsumer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Administrators select this optional checkbox to indicate if the related provider and settings are for consumer credit pulls. The default is unselected which indicates a business credit pull.</description>
    <label>Is Consumer</label>
    <type>Checkbox</type>
</CustomField>