force-app/main/default/objects/SCOC__SCOCProviderSettings__c/fields/SCOC__LoggingMaxRetryAttempts__c.field-meta.xml
<CustomField>
    <fullName>SCOC__LoggingMaxRetryAttempts__c</fullName>
    <description>The maximum amount of times to attempt to retry a DML interaction before erroring.</description>
    <label>-D Logging Max Retry Attempts</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>