force-app/main/default/objects/SCOC__SCOCProviderSettings__c/fields/SCOC__NamedCredentialOrEndpoint__c.field-meta.xml
<CustomField>
    <fullName>SCOC__NamedCredentialOrEndpoint__c</fullName>
    <description>This field has been deprecated</description>
    <label>-D Named Credential or Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>