force-app/main/default/objects/SCOC__SCOCProviderSettings__c/fields/SCOC__PassthroughOriginalRequests__c.field-meta.xml
<CustomField>
    <fullName>SCOC__PassthroughOriginalRequests__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this provider will bypass all on-platform mapping activity and push the default request to the endpoint specified.</description>
    <label>-D Pass-through Original Requests</label>
    <type>Checkbox</type>
</CustomField>