force-app/main/default/objects/SCOC__SCOCProviderSettings__c/fields/SCOC__PassthroughSimpleRequests__c.field-meta.xml
<CustomField>
    <fullName>SCOC__PassthroughSimpleRequests__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this provider will bypass all on-platform mapping activity and push a simple unmapped request as to the endpoint specified.</description>
    <label>-D Pass-through Simple Requests</label>
    <type>Checkbox</type>
</CustomField>