force-app/main/default/objects/SCOC__SCOCProviderSettings__c/fields/SCOC__StoreRequests__c.field-meta.xml
<CustomField>
    <fullName>SCOC__StoreRequests__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this vendor provider will store requests when utilized.</description>
    <label>-D Store Requests</label>
    <type>Checkbox</type>
</CustomField>