force-app/main/default/objects/SCOC__SCOCProviderSettings__c/fields/SCOC__StoreResponses__c.field-meta.xml
<CustomField>
    <fullName>SCOC__StoreResponses__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this vendor provider will store responses when utilized.</description>
    <label>-D Store Responses</label>
    <type>Checkbox</type>
</CustomField>