force-app/main/default/objects/SCOC__SCOCProviderSettings__c/fields/SCOC__VendorProvider__c.field-meta.xml
<CustomField>
    <fullName>SCOC__VendorProvider__c</fullName>
    <description>The fully qualified SCOC accessible class name of the vendor provider which implements the ASCOCProvider_v1 abstract class.</description>
    <label>Vendor Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>